--- a/CloudStorageTools.csproj
+++ b/CloudStorageTools.csproj
@@ -33,8 +33,88 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AWSSDK.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <HintPath>packages\AWSSDK.Core.4.0.0.17\lib\net472\AWSSDK.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="AWSSDK.S3, Version=4.0.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <HintPath>packages\AWSSDK.S3.4.0.6.2\lib\net472\AWSSDK.S3.dll</HintPath>
+    </Reference>
+    <Reference Include="Azure.Core, Version=1.44.1.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
+      <HintPath>packages\Azure.Core.1.44.1\lib\net472\Azure.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Azure.Storage.Blobs, Version=12.25.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
+      <HintPath>packages\Azure.Storage.Blobs.12.25.0\lib\netstandard2.0\Azure.Storage.Blobs.dll</HintPath>
+    </Reference>
+    <Reference Include="Azure.Storage.Common, Version=12.24.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
+      <HintPath>packages\Azure.Storage.Common.12.24.0\lib\netstandard2.0\Azure.Storage.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="CsvHelper, Version=33.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>packages\CsvHelper.33.1.0\lib\net48\CsvHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="EPPlus, Version=8.0.8.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>packages\EPPlus.8.0.8\lib\net462\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="EPPlus.Interfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=a694d7f3b0907a61, processorArchitecture=MSIL">
+      <HintPath>packages\EPPlus.Interfaces.8.0.0\lib\net462\EPPlus.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Bcl.HashCode, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Bcl.HashCode.1.1.1\lib\net461\Microsoft.Bcl.HashCode.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IO.RecyclableMemoryStream, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.IO.RecyclableMemoryStream.3.0.1\lib\netstandard2.0\Microsoft.IO.RecyclableMemoryStream.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ClientModel, Version=1.1.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
+      <HintPath>packages\System.ClientModel.1.1.0\lib\netstandard2.0\System.ClientModel.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.ComponentModel.Annotations.5.0.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Diagnostics.DiagnosticSource, Version=6.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Diagnostics.DiagnosticSource.6.0.1\lib\net461\System.Diagnostics.DiagnosticSource.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IO.Hashing, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.IO.Hashing.8.0.0\lib\net462\System.IO.Hashing.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Memory.Data, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Memory.Data.6.0.0\lib\net461\System.Memory.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Security" />
+    <Reference Include="System.Security.Cryptography.Xml, Version=8.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Security.Cryptography.Xml.8.0.2\lib\net462\System.Security.Cryptography.Xml.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Encodings.Web, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Text.Encodings.Web.8.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Json, Version=8.0.0.5, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Text.Json.8.0.5\lib\net462\System.Text.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,7 +129,29 @@
     <Compile Include="CloudFileCleaner\CloudFileFinderDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VideoSizeFinder\VideoInfoDto.cs" />
+    <Compile Include="VideoSizeFinder\Components\VideoSizeFinderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoSizeFinder\Components\VideoSizeFinderForm.Designer.cs">
+      <DependentUpon>VideoSizeFinderForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VideoSizeFinder\Dtos\CloudMediaItemDto.cs" />
+    <Compile Include="VideoSizeFinder\Dtos\CloudMediaSearchDto.cs" />
+    <Compile Include="VideoSizeFinder\Dtos\VideoInfoDto.cs" />
+    <Compile Include="VideoSizeFinder\Entities\AwsS3Config.cs" />
+    <Compile Include="VideoSizeFinder\Entities\AzureBlobConfig.cs" />
+    <Compile Include="VideoSizeFinder\Entities\CloudConnectionConfig.cs" />
+    <Compile Include="VideoSizeFinder\Enums\CloudMediaType.cs" />
+    <Compile Include="VideoSizeFinder\Enums\CloudProviderType.cs" />
+    <Compile Include="VideoSizeFinder\Enums\MediaSearchType.cs" />
+    <Compile Include="VideoSizeFinder\Factory\CloudMediaServiceFactory.cs" />
+    <Compile Include="VideoSizeFinder\Interfaces\ICloudMediaService.cs" />
+    <Compile Include="VideoSizeFinder\Interfaces\IExcelExportService.cs" />
+    <Compile Include="VideoSizeFinder\Interfaces\IFFmpegAnalyzerService.cs" />
+    <Compile Include="VideoSizeFinder\Services\AwsMediaService.cs" />
+    <Compile Include="VideoSizeFinder\Services\AzureMediaService.cs" />
+    <Compile Include="VideoSizeFinder\Services\ExcelExportService.cs" />
+    <Compile Include="VideoSizeFinder\Services\FFmpegAnalyzerService.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -59,6 +161,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VideoSizeFinder\Components\VideoSizeFinderForm.resx">
+      <DependentUpon>VideoSizeFinderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -72,18 +178,31 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Assets\FFMPEG\avcodec-62.dll" />
-    <Content Include="Assets\FFMPEG\avdevice-62.dll" />
-    <Content Include="Assets\FFMPEG\avfilter-11.dll" />
-    <Content Include="Assets\FFMPEG\avformat-62.dll" />
-    <Content Include="Assets\FFMPEG\avutil-60.dll" />
-    <Content Include="Assets\FFMPEG\ffmpeg.exe" />
-    <Content Include="Assets\FFMPEG\ffplay.exe" />
-    <Content Include="Assets\FFMPEG\ffprobe.exe" />
-    <Content Include="Assets\FFMPEG\swresample-6.dll" />
-    <Content Include="Assets\FFMPEG\swscale-9.dll" />
+    <Analyzer Include="packages\AWSSDK.S3.4.0.6.2\analyzers\dotnet\cs\AWSSDK.S3.CodeAnalysis.dll" />
+    <Analyzer Include="packages\AWSSDK.S3.4.0.6.2\analyzers\dotnet\cs\SharedAnalysisCode.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\Assets\FFMPEG\avcodec-62.dll" />
+    <Content Include="bin\Debug\Assets\FFMPEG\avdevice-62.dll" />
+    <Content Include="bin\Debug\Assets\FFMPEG\avfilter-11.dll" />
+    <Content Include="bin\Debug\Assets\FFMPEG\avformat-62.dll" />
+    <Content Include="bin\Debug\Assets\FFMPEG\avutil-60.dll" />
+    <Content Include="bin\Debug\Assets\FFMPEG\ffmpeg.exe" />
+    <Content Include="bin\Debug\Assets\FFMPEG\ffplay.exe" />
+    <Content Include="bin\Debug\Assets\FFMPEG\ffprobe.exe" />
+    <Content Include="bin\Debug\Assets\FFMPEG\swresample-6.dll" />
+    <Content Include="bin\Debug\Assets\FFMPEG\swscale-9.dll" />
+    <Content Include="bin\Release\Assets\FFMPEG\avcodec-62.dll" />
+    <Content Include="bin\Release\Assets\FFMPEG\avdevice-62.dll" />
+    <Content Include="bin\Release\Assets\FFMPEG\avfilter-11.dll" />
+    <Content Include="bin\Release\Assets\FFMPEG\avformat-62.dll" />
+    <Content Include="bin\Release\Assets\FFMPEG\avutil-60.dll" />
+    <Content Include="bin\Release\Assets\FFMPEG\ffmpeg.exe" />
+    <Content Include="bin\Release\Assets\FFMPEG\ffplay.exe" />
+    <Content Include="bin\Release\Assets\FFMPEG\ffprobe.exe" />
+    <Content Include="bin\Release\Assets\FFMPEG\swresample-6.dll" />
+    <Content Include="bin\Release\Assets\FFMPEG\swscale-9.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
