--- a/packages.config
+++ b/packages.config
@@ -6,8 +6,9 @@
   <package id="Azure.Storage.Blobs" version="12.25.0" targetFramework="net48" />
   <package id="Azure.Storage.Common" version="12.24.0" targetFramework="net48" />
   <package id="CsvHelper" version="33.1.0" targetFramework="net48" />
-  <package id="EPPlus" version="8.0.8" targetFramework="net48" />
+  <package id="EPPlus" version="7.0.10" targetFramework="net48" />
   <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
