--- a/CloudStorageTools.csproj
+++ b/CloudStorageTools.csproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CloudFileCleaner\CloudFileFinderDto.cs" />
+    <Compile Include="CloudMediaValidator\Dummy1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VideoSizeFinder\Components\VideoSizeFinderForm.cs">
@@ -255,8 +256,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CloudMediaValidator\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
