--- a/CloudStorageTools.csproj
+++ b/CloudStorageTools.csproj
@@ -161,7 +161,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CloudFileCleaner\CloudFileFinderDto.cs" />
-    <Compile Include="CloudMediaValidator\Dummy1.cs" />
+    <Compile Include="CloudMediaValidator\Components\CloudMediaValidatorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CloudMediaValidator\Components\CloudMediaValidatorForm.Designer.cs">
+      <DependentUpon>CloudMediaValidatorForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CloudMediaValidator\Dtos\MediaValidationDto.cs" />
+    <Compile Include="CloudMediaValidator\Services\CloudMediaValidatorService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VideoSizeFinder\Components\VideoSizeFinderForm.cs">
@@ -191,6 +198,9 @@
     <Compile Include="VideoSizeFinder\Services\FFmpegAnalyzerService.cs" />
     <Compile Include="VideoSizeFinder\Services\KeysLoaderService.cs" />
     <Compile Include="VideoSizeFinder\Services\ResourcesManager.cs" />
+    <EmbeddedResource Include="CloudMediaValidator\Components\CloudMediaValidatorForm.resx">
+      <DependentUpon>CloudMediaValidatorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
