--- a/packages.config
+++ b/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp" version="3.1.11" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ClientModel" version="1.1.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
